--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,18 +10,24 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".MainActivity" >
-
-        </activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".Login" >
+        </activity>
+        <activity android:name=".Main2Activity" />
+        <activity
+            android:name=".Drawable"
+            android:label="@string/title_activity_drawable"
+            android:theme="@style/AppTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Main2Activity" >
-        </activity>
+        <activity
+            android:name=".activity.IconTextTabsActivity"
+            android:label="@string/title_activity_icon_text_tabs"
+            android:parentActivityName=".activity.MainActivity" />
     </application>
 
 </manifest>
